# sqltodf

./: .gitignore  README.md  mypy.ini  pyproject.toml  setup.py
sqltodf/: __init__.py  engine.py
tests/: test_config.py  test_connections.py  test_queries.py  test_query.sql
